--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.3",
+    "normalize.css": "^8.0.1",
+    "postcss-px-to-viewport": "^1.1.1",
+    "vant": "^2.12.47",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
