--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.3",
     "normalize.css": "^8.0.1",
     "postcss-px-to-viewport": "^1.1.1",
+    "socket.io-client": "4.0.0",
     "vant": "^2.12.47",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
@@ -33,6 +34,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "highlight.js": "^11.5.1",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.14"
